# verlet-simulations

./: CMakeLists.txt  Makefile  README.md  collisions.cpp  collisions.out
include/: colors.hpp  objects.hpp
resources/: arrow-zero.drawio  arrow.drawio  arrow.xcf
src/: collisions_euler.cpp  collisions_euler_final.cpp
